<resources>
    <string name="app_name">Autenticazione</string>
    <string name="tvCamera">Scatta una foto</string>
    <string name="tvGallery">Scegli dalla galleria</string>
    <string name="tvLogout">Logout</string>
    <string name="tvIntroCredito">Il tuo credito è: </string>
    <string name="tUserSettingsActivity">Impostazioni </string>
    <string name="tEditProfileActivity">Modifica profilo </string>
    <string name="tReservationsActivity">Le tue transazioni: </string>
    <string name="myRequests">Le tue richieste </string>
    <string name="requestsToMe">Le tue prenotazioni </string>
    <string name="tvTimeText">Inserisci ora </string>
    <string name="myAvailabilities">Le tue disponibilità </string>
    <string name="tNotifyActivity">Segnala parcheggio </string>
    <string name="tMapActivity">Esplora </string>
    <string name="tLoginActivity">Accedi </string>
    <string name="tRegisterActivity">Registrati </string>
    <string name="tvAuto">Seleziona auto </string>
    <string name="tvTime">Inserisci ora </string>
    <string name="cancel_option">Annulla</string>
    <string name="save_option">Salva</string>
    <string name="create_option">Nuovo</string>
    <string name="update_option">Modifica</string>
    <string name="tEditAuto">Inserisci dati</string>
    <string name="delete_option">Elimina</string>
    <string name="tvNotification">Gestisci notifiche</string>
    <string name="tvPermission">Gestisci permessi</string>
    <string name="sAlert">Avvisami quando il tempo sta per scadere</string>
    <string name="sNotification">Avvisami quando il mio posto viene prenotato</string>
    <string name="sNotificationAccept">Avvisami quando la mia richiesta viene accettata</string>
    <string name="tvAlert">Inserisci minuti di preavviso:</string>
    <string name="bSave">Salva modifiche</string>
    <string name="title_activity_reservation">ReservationActivity</string>
    <string name="tvNotificationReject">Avvisami quando la mia richiesta viene rifiutata</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
