<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettings">

    <include
        android:id="@+id/home_bar"
        layout="@layout/home_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"></include>

    <TextView
        android:id="@+id/tUserSettingsActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tUserSettingsActivity"
        android:textColor="@color/colorBackground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/home_bar"
        app:layout_constraintEnd_toEndOf="@+id/home_bar"
        app:layout_constraintStart_toStartOf="@+id/home_bar"
        app:layout_constraintTop_toTopOf="@+id/home_bar" />

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backToMainAct"
        app:layout_constraintBottom_toBottomOf="@+id/home_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="@+id/home_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <Switch
        android:id="@+id/sNotificationRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sNotification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_bar"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/tvNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNotification"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_bar"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/tvPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPermission"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_bar"
        app:layout_constraintVertical_bias="0.603" />

    <Switch
        android:id="@+id/sAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sAlert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_bar"
        app:layout_constraintVertical_bias="0.305" />

    <Switch
        android:id="@+id/sNotificationAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sNotificationAccept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_bar"
        app:layout_constraintVertical_bias="0.175" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="79dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_bar"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
        android:id="@+id/tvAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAlert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etTime"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <Button
        android:id="@+id/bSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_bar"
        app:layout_constraintVertical_bias="0.778" />

    <TextView
        android:id="@+id/tvNotificationReject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tvPermission"
        app:layout_constraintEnd_toStartOf="@+id/sNotificationReject"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlert"
        app:layout_constraintVertical_bias="0.654" />

    <Switch
        android:id="@+id/sNotificationReject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

</androidx.constraintlayout.widget.ConstraintLayout>