<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    tools:context=".ReservationsActivity">

    <include
        android:id="@+id/home_bar"
        layout="@layout/home_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></include>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_bar"
        app:layout_constraintVertical_bias="0.004">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/requestsToMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/requestsToMe" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/myRequests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/myRequests" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/myAvailabilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/myAvailabilities" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="424dp"
        android:layout_height="622dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <TextView
        android:id="@+id/tReservationsActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tReservationsActivity"
        app:layout_constraintBottom_toBottomOf="@+id/home_bar"
        app:layout_constraintEnd_toEndOf="@+id/home_bar"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="@+id/home_bar"
        app:layout_constraintTop_toTopOf="@+id/home_bar"
        app:layout_constraintVertical_bias="0.432" />

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goBackToMainActivity"
        app:layout_constraintBottom_toBottomOf="@+id/home_bar"
        app:layout_constraintEnd_toEndOf="@+id/home_bar"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toEndOf="@+id/tReservationsActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_revert" />


</androidx.constraintlayout.widget.ConstraintLayout>